--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+.icon { width: 40px; height: 40px; background-size: cover; }
+.icon-s { width: 24px; height: 24px; background-size: cover; }
+
+.icon-star-on { background-image: url('/assets/icons/star-on.png'); }
+.icon-star-off { background-image: url('/assets/icons/star-off.png'); }
