--- a/src/app/pokemon-stats/pokemon-stats.component.html
+++ b/src/app/pokemon-stats/pokemon-stats.component.html
@@ -2,7 +2,7 @@
     <div *ngFor="let stat of stats" class="stat-item flex items-center p-2">
         <div class="w-1/4">{{ getStatNaming(stat.stat.name) }}</div>
         <div class="w-3/4 flex flex-row items-center">
-            <div class="bg-blue-500 h-4 rounded" [style.width]="getStatWidth(stat.base_stat)"></div>
+            <div class="bg-indigo-200 h-4 rounded" [style.width]="getStatWidth(stat.base_stat)"></div>
             <span class="ml-2">{{ stat.base_stat }}</span>
         </div>
     </div>
