pokemon types component

--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,6 +1,6 @@
 <!-- PokédexComponent -->
 <div class="wrapper">
-    <div class="flex flex-col p-3 md:m-auto md:w-3/4 justify-center">
+    <div class="flex flex-col px-3 py-16 md:m-auto md:w-3/5 justify-center">
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
             <app-pokemon *ngFor="let pokemon of pokemons" [pokemon]="pokemon"></app-pokemon>
         </div>
